changed src to src/main/java - damn you eclipse standard

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <version>0.1</version>
   <name>Database Model for a more general comment store</name>
   <build>
-    <sourceDirectory>src</sourceDirectory>
+    <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
